fixed issue with zip input inaccessibility, map now initializes and allows pinning after containing div is rendered visible

--- a/css/add_spot_mobile.css
+++ b/css/add_spot_mobile.css
@@ -120,24 +120,20 @@ html, body, .grid-container { height: 100%; margin: 0; }
   font-size: 200%;
 }
 
-#ziplabel {
-  grid-column: 2/4;
-  grid-row: 3/4;
-  font-size: xx-large;
-  background-color: rgba(255,255,255,0.5);  
-  font-weight: 500;
-}
-
-#zipinput {
-  grid-column: 4/8;
-  grid-row: 3/4;
+/*
+#mapdiv {
+  grid-column: 2/8;
+  grid-row: 2/10;
+  border-style: solid;
+  border-width: 1px;
+  border-color:white;
   z-index: 2;
-  font-size: 25px;
 }
+*/
 
 #mapdiv {
   grid-column: 2/8;
-  grid-row: 3/10;
+  grid-row: 5/10;
   border-style: solid;
   border-width: 1px;
   border-color:white;
@@ -157,4 +153,19 @@ html, body, .grid-container { height: 100%; margin: 0; }
   grid-row: 5/10;
   background-color: rgba(255,255,255,0.5);  
   z-index: 2;
+}
+
+#ziplabel {
+  grid-column: 2/4;
+  grid-row: 3/4;
+  font-size: xx-large;
+  background-color: rgba(255,255,255,0.5);  
+  font-weight: 500;
+}
+
+#zipinput {
+  grid-column: 4/8;
+  grid-row: 3/4;
+  z-index: 2;
+  font-size: 25px;
 }
